CNSDEVCOLECT/force-app/main/default/objects/LossReasonBank__c/LossReasonBank__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Lista de motivos de cierre perdida Banca</description>
    <label>LossReasonBank</label>
</CustomObject>