CNSDEVCOLECT/force-app/main/default/objects/LossReasonBank__c/fields/Product_Bank__c.field-meta.xml
<CustomField>
    <fullName>Product_Bank__c</fullName>
    <description>Producto de Banca Asociado al registro</description>
    <label>Product_Bank</label>
    <length>50</length>
    <type>Text</type>
</CustomField>