CNSDEVCOLECT/force-app/main/default/objects/LossReasonBank__c/fields/ReasonBE__c.field-meta.xml
<CustomField>
    <fullName>ReasonBE__c</fullName>
    <description>Motivo perdida Backend</description>
    <label>ReasonBE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>