CNSDEVCOLECT/force-app/main/default/objects/LossReasonBank__c/fields/ReasonSF__c.field-meta.xml
<CustomField>
    <fullName>ReasonSF__c</fullName>
    <description>Motivo perdida de Salesforce según motivo Cumbres</description>
    <label>ReasonSF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>