CNSDEVCOLECT/force-app/main/default/objects/LossReasonBank__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ReasonBE__c</columns>
    <columns>ReasonSF__c</columns>
    <columns>Product_Bank__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>